<resources>
    <string name="app_name">Money Manager</string>
    <string name="riwayat">RIWAYAT</string>
    <string name="money_manager">Money Manager</string>
    <string name="tanggal">04 / 2024</string>
    <string name="total">Total :</string>
    <string name="totalduit">Rp. 900.000</string>
    <string name="totaluang">Rp. 1.000.000</string>
    <string name="wallet">Wallet</string>
    <string name="aset_bersih">Aset Bersih</string>
    <string name="rp_760_000">Rp 760.000</string>
    <string name="pemasukkan">Pemasukkan</string>
    <string name="totalpemasukan">Rp 1.000.000</string>
    <string name="pengeluaran">Pengeluaran</string>
    <string name="rp_240_000">Rp 240.000</string>
    <string name="card">card</string>
    <string name="card1">Card</string>
    <string name="pemasukan1">Pemasukan</string>
    <string name="pengeluaran1">Pengeluaran</string>
    <string name="totalpengeluaran">Rp 100.000</string>
    <string name="analyst">Analyst</string>
    <string name="oleh_kategori">oleh kategori</string>
    <string name="oleh_kategori1">oleh_kategori</string>
    <string name="export">Export</string>
    <string name="tanggal1">Tanggal</string>
    <string name="all">All</string>
    <string name="export1">EXPORT</string>
</resources>