<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainscreen"
    android:background="@color/secondary"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/purplecloud"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="-200dp"
        android:layout_marginTop="-200dp"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/purplecloud"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/navbar"
        android:layout_marginStart="200dp"/>


    <FrameLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="30dp"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal">

            <ImageButton
                android:id="@+id/searchbutton"
                android:layout_marginStart="10dp"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/buttontransparent"
                android:src="@drawable/searchicon"/>

            <TextView
                android:id="@+id/text1"
                android:layout_width="wrap_content"
                android:layout_height="45dp"
                android:layout_marginTop="3dp"
                android:layout_marginStart="10dp"
                android:text="@string/money_manager"
                android:fontFamily="@font/regular"
                android:textSize="28sp" />

        </LinearLayout>

    </FrameLayout>

    <FrameLayout
        android:id="@+id/navbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:foregroundGravity="center"
        tools:ignore="MissingConstraints">


    </FrameLayout>


    <FrameLayout
        android:id="@+id/menu"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        android:layout_marginTop="30dp"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/buttonWallet"
                android:layout_width="75dp"
                android:layout_height="70dp"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="20dp"
                android:background="@drawable/button"
                android:src="@drawable/walletbutton" />

            <ImageButton
                android:id="@+id/buttonCard"
                android:layout_width="75dp"
                android:layout_height="70dp"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="20dp"
                android:background="@drawable/button"
                android:src="@drawable/cardbutton" />

            <ImageButton
                android:id="@+id/buttonAnalyst"
                android:layout_width="75dp"
                android:layout_height="70dp"
                android:layout_marginEnd="20dp"
                android:layout_gravity="center_vertical"
                android:background="@drawable/button"
                android:src="@drawable/analystbutton" />

            <ImageButton
                android:id="@+id/buttonExport"
                android:layout_width="75dp"
                android:layout_height="70dp"
                android:layout_gravity="center_vertical"
                android:background="@drawable/button"
                android:src="@drawable/exportbutton" />

        </LinearLayout>

    </FrameLayout>

    <FrameLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="720dp"
        android:layout_marginTop="36dp"
        android:background="@drawable/roundprimary"
        app:layout_constraintTop_toBottomOf="@+id/menu"
        tools:layout_editor_absoluteX="0dp">

        <View
            android:layout_width="100dp"
            android:layout_height="4dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:background="@color/white" />

        <FrameLayout
            android:id="@+id/info"
            android:layout_width="380dp"
            android:layout_height="220dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="60dp"
            android:background="@drawable/card" >

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/arrowblack"
                android:background="@drawable/buttontransparent"
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:text="@string/tanggal"
                android:layout_marginStart="40dp"
                android:layout_marginTop="12dp"
                android:fontFamily="@font/regular"/>
            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/arrowblack"
                android:background="@drawable/buttontransparent"
                android:layout_marginTop="10dp"
                android:layout_marginStart="110dp"
                android:rotation="180"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:text="@string/total"
                android:textSize="20dp"
                android:fontFamily="@font/regular"
                android:layout_marginTop="40dp"
                android:layout_gravity="center_horizontal"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:text="@string/totalduit"
                android:textSize="40dp"
                android:fontFamily="@font/regular"
                android:layout_marginTop="65dp"
                android:layout_gravity="center_horizontal"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:text="Pemasukan"
                android:textSize="10dp"
                android:fontFamily="@font/regular"
                android:layout_gravity="left"
                android:layout_marginTop="135dp"
                android:layout_marginStart="60dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:text="@string/totalpendapatan"
                android:textColor="@android:color/holo_green_dark"
                android:textSize="20dp"
                android:fontFamily="@font/regular"
                android:layout_gravity="left"
                android:layout_marginTop="150dp"
                android:layout_marginStart="30dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:text="Pengeluaran"
                android:textSize="10dp"
                android:fontFamily="@font/regular"
                android:layout_gravity="right"
                android:layout_marginTop="135dp"
                android:layout_marginEnd="60dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:text="Rp 100.000"
                android:textColor="@android:color/holo_red_dark"
                android:textSize="20dp"
                android:fontFamily="@font/regular"
                android:layout_gravity="right"
                android:layout_marginTop="150dp"
                android:layout_marginEnd="38dp"/>


        </FrameLayout>

        <View
            android:layout_width="100dp"
            android:layout_height="4dp"
            android:layout_marginLeft="28dp"
            android:layout_marginTop="300dp"
            android:background="@color/white" />

        <TextView
            android:layout_width="120dp"
            android:layout_height="30dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="284dp"
            android:fontFamily="@font/regular"
            android:text="@string/riwayat"
            android:textColor="@color/white"
            android:textSize="24dp"
            android:textStyle="normal" />

        <View
            android:layout_width="100dp"
            android:layout_height="4dp"
            android:layout_marginLeft="280dp"
            android:layout_marginTop="300dp"
            android:background="@color/white" />

        <FrameLayout
            android:id="@+id/riwayat1"
            android:layout_width="380dp"
            android:layout_height="110dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="320dp"
            android:background="@drawable/card" />

        <FrameLayout
            android:id="@+id/riwayat2"
            android:layout_width="380dp"
            android:layout_height="110dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="450dp"
            android:background="@drawable/card" />
    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>